NBBIB-228 Add verified migration mormon and correct citation spacing

--- a/custom/themes/nbbib_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nbbib_lib_unb_ca/src/scss/style.scss
@@ -225,6 +225,15 @@ header {
             padding-left: 0;
           }
         }
+
+        // Search result.
+        .search-result {
+
+          // Field content.
+          .field-content {
+            margin-bottom: 0;
+          }
+        }
       }
 
       // Collections view.
